@@ -1,3 +1,13 @@
+2002-03-29  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclCmdMZ.c (Tcl_TraceObjCmd, TraceVarProc)
+	(TraceCommandProc, TclTraceCommandObjCmd):  corrected
+	potential double-free of traces on variables by flagging in
+	Trace*Proc that it will free the var in case the eval wants to
+	delete the var trace as well. [Bug #536937]
+	Also converted Tcl_UntraceVar -> Tcl_UntraceVar2 and Tcl_Eval to
+	Tcl_EvalEx in Trace*Proc for slight efficiency improvement.
+
 2002-03-29  Don Porter  <dgp@users.sourceforge.net>
 
 	* doc/AllowExc.3:
